[tool.poetry]
name = "gtnh"
version = "0.9.0"
description = "GTNH Modpack Updater and Assembler"
authors = ["Jason Mitchell <mitchej@gmail.com>"]
license = "lgpl 3.0"

[tool.poetry.dependencies]
python = "^3.10"
in-place = "^0.5.0"
pydantic = "~=1.9.0"
retry = "~=0.9.2"
colorama = "^0.4.4"
types-requests = "^2.27.12"
types-retry = "^0.9.5"
mypy = "^0.940"
flake8 = "^4.0.1"
pytest = "^7.1.0"
black = "^22.1.0"
isort = "^5.10.1"
orjson = "^3.7.2"
structlog = "^21.5.0"
gidgethub = "^5.2.0"
httpx = {extras = ["http2"], version = "^0.23.0"}
asyncclick = "^8.1.3"
async-cache = "^1.1.1"
python-dateutil = "^2.8.2"
types-python-dateutil = "^2.8.19"
ttkthemes = "^3.2.2"

[tool.black]
line-length = 120
target-version = ['py310']
exclude = '''
    (
      /(
          \.eggs         # exclude a few common directories in the
        | \.git          # root of the project
        | \.hg
        | \.mypy_cache
        | \.tox
        | \.venv
        | _build
        | buck-out
        | build
        | dist
      )
    )
    '''

[tool.isort]
src_paths = ["src"]
atomic = true
case_sensitive = true
multi_line_output = 3
include_trailing_comma = true
combine_as_imports = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
    
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
