[project]
name = "gtnh"
version = "0.9.0"
description = "GTNH Modpack Updater and Assembler"
authors = [{ name = "Jason Mitchell", email = "mitchej@gmail.com" }]
requires-python = ">= 3.10"
license = "LGPL-3.0-only"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "in-place>=0.5.0,<0.6",
  "pydantic~=1.10.0",
  "retry~=0.9.2",
  "colorama>=0.4.4,<0.5",
  "types-requests>=2.27.12,<3",
  "types-retry>=0.9.5,<0.10",
  "mypy>=0.940,<0.941",
  "flake8>=6.0.0,<7",
  "pytest>=7.1.0,<8",
  "black>=22.1.0,<23",
  "isort>=5.10.1,<6",
  "orjson>=3.7.2,<4",
  "structlog>=21.5.0,<22",
  "gidgethub>=5.2.0,<6",
  "httpx[http2]>=0.23.0,<0.24",
  "asyncclick>=8.1.3,<9",
  "async-cache>=1.1.1,<2",
  "python-dateutil>=2.8.2,<3",
  "types-python-dateutil>=2.8.19,<3",
  "ttkthemes>=3.2.2,<4",
  "types-ttkthemes>=3.2.4.2,<4",
  "packaging-legacy>=23.0.post0,<24",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.black]
line-length = 120
target-version = ['py310']
exclude = '''
    (
      /(
          \.eggs         # exclude a few common directories in the
        | \.git          # root of the project
        | \.hg
        | \.mypy_cache
        | \.tox
        | \.venv
        | _build
        | buck-out
        | build
        | dist
      )
    )
    '''

[tool.isort]
src_paths = ["src"]
atomic = true
case_sensitive = true
multi_line_output = 3
include_trailing_comma = true
combine_as_imports = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
