[project]
name = "DAXXL"
version = "1.0.0"
description = "GTNH Modpack Updater and Assembler - Dream Assembler XXL"
authors = [{ name = "The GT New Horizons Contributors" }]
requires-python = ">=3.11,<4"

dependencies = [
    "in-place>=0.5.0,<0.6",
    "pydantic~=1.10.0",
    "retry~=0.9.2",
    "colorama>=0.4.4,<0.5",
    "types-retry>=0.9.5,<0.10",
    "pytest>=7.1.0,<8",
    "orjson>=3.7.2,<4",
    "structlog>=21.5.0,<22",
    "gidgethub>=5.2.0,<6",
    "httpx[http2]>=0.23.0,<0.24",
    "asyncclick>=8.1.3,<9",
    "async-cache>=1.1,<1.2",
    "python-dateutil>=2.8.2,<3",
    "types-python-dateutil>=2.8.19,<3",
    "ttkthemes>=3.2.2,<4",
    "types-ttkthemes>=3.2.4.2,<4",
    "packaging-legacy>=23.0.post0,<24",
    "click>=8.4.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.16",
    "ty>=0.0.44",
]

[project.urls]
Repository = "https://github.com/GTNewHorizons/DreamAssemblerXXL"

[build-system]
requires = ["uv_build>=0.10.3,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I"]

[tool.ruff.lint.pycodestyle]
max-line-length = 160

[tool.ruff.lint.isort]
combine-as-imports = true
case-sensitive = true

[tool.ty.environment]
root = ["./src"]

[tool.ty.rules]
unresolved-import = "ignore"

[tool.uv]
exclude-newer = "12 days"